--- a/ProjectManagement/src/main/resources/templates/menu_bar_student.html
+++ b/ProjectManagement/src/main/resources/templates/menu_bar_student.html
@@ -11,7 +11,9 @@
     <!-- Add data-bs-toggle and data-bs-target to your notification button -->
     <button type="button" class="notification-button" data-bs-toggle="modal" data-bs-target="#notificationModal">
         <i class="fas fa-bell"></i>
-        <span id="badge" class="badge"></span>
+        <span id="badge" th:class="${count_noti == 0} ? 'd-none' : 'badge'">
+            <span  th:text="${count_noti}" class="text-badge"></span>
+        </span>
     </button>
 </div>
 <ul class="nav nav-pills flex-column mb-auto">
@@ -132,7 +134,9 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-   
+
+
+
    function acceptRequest(element){
         var request_id = $(element).parent().parent().find('.request_id').text();
         var group_id = $(element).parent().parent().find('.group_id').text();
