join group checkbox design

--- a/ProjectManagement/src/main/resources/templates/joingroup.html
+++ b/ProjectManagement/src/main/resources/templates/joingroup.html
@@ -59,16 +59,36 @@
                         </div>
                             <div >
                                 <table  class="checkbox-group" id="tag">
-                                    <tr>
-                                        <td><input type="checkbox" name="tag" value="Developer">Developer</td>
-                                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                                        <td><input type="checkbox" name="tag" value="Manager">Manager</td>
-                                    </tr>
-                                    <tr>
-                                        <td><input type="checkbox" name="tag" value="Tester">Tester</td>
-                                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                                        <td><input type="checkbox" name="tag" value="Designer">Designer</td>
-                                    </tr>
+                                    <div class="form-check form-check-custom form-check-solid">
+                                        <input class="form-check-input" type="checkbox" name="tag" value="Developer" />
+                                        <label class="form-check-label text-black" >
+                                            Developer
+                                        </label>
+                                        <input class="form-check-input" type="checkbox" name="tag" value="Manager" />
+                                        <label class="form-check-label text-black" >
+                                            Manager
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-custom form-check-solid mt-2">
+                                        <input class="form-check-input" type="checkbox" name="tag"  value="Tester" />
+                                        <label class="form-check-label text-black" >
+                                            Tester
+                                        </label>
+                                        <input class="form-check-input" type="checkbox" name="tag" value="Designer" />
+                                        <label class="form-check-label text-black" >
+                                            Designer
+                                        </label>
+                                    </div>
+<!--                                    <tr>-->
+<!--                                        <td><input type="checkbox" name="tag" value="Developer">Developer</td>-->
+<!--                                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>-->
+<!--                                        <td><input class="form-check-input" type="checkbox" name="tag" value="Manager">Manager</td>-->
+<!--                                    </tr>-->
+<!--                                    <tr>-->
+<!--                                        <td><input type="checkbox" name="tag" value="Tester">Tester</td>-->
+<!--                                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>-->
+<!--                                        <td><input type="checkbox" name="tag" value="Designer">Designer</td>-->
+<!--                                    </tr>-->
                                 </table>
                             </div >
                             <input class="btn btn-primary search doc_id " type="submit" value="Search"> 
