--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -38,8 +38,8 @@
                             <div style="font-size: larger;"><strong>Group Member:</strong><br>
                                 <div th:each="member, iterStat :${group.members}">
                                     <span id="clickmember" onclick="memberClick(this)" th:text="${member.firstName + ' ' + member.lastName + ' ' + member.username + ' (' + (member.role)+')'}">
-                                
                                     </span>
+                                    <a th:href="'/profile?username='+${member.username}">Detail</a>
                                     <div class="d-none member_doc_id" th:text="${member.documentId}" ></div>
                                     <br/>
                                 </div></p>
