--- a/ProjectManagement/src/main/resources/templates/memberscrum_board.html
+++ b/ProjectManagement/src/main/resources/templates/memberscrum_board.html
@@ -113,7 +113,7 @@
                                         <span th:text="${member.username}"></span>
                                      <span th:text="${member.firstName}"></span>
                                        <span th:text="${member.lastName}"></span>
-                                        <a th:href="'/profile?username='+${member.username}">Profile</a>
+                                        <a th:href="'/viewprofile?username='+${member.username}">Profile</a>
 
                                  </h3>
                                 </div>
