--- a/ProjectManagement/src/main/resources/templates/scrum_board.html
+++ b/ProjectManagement/src/main/resources/templates/scrum_board.html
@@ -117,6 +117,7 @@
                                         <span th:text="${member.username}"></span>
                                      <span th:text="${member.firstName}"></span>
                                        <span th:text="${member.lastName}"></span>
+                                       <a th:href="'/viewprofile?username='+${member.username}">Profile</a>
                                 <!-- </button> -->
                                  </h3>
                             
