--- a/ProjectManagement/src/main/resources/templates/menu_bar_student.html
+++ b/ProjectManagement/src/main/resources/templates/menu_bar_student.html
@@ -90,7 +90,7 @@
                     <div class="notification-item">
                         <div class="row"><div class="col-9">
                         <p class="notification-text">
-                            <a th:href="'/profile?username='+${noti.username}"><strong th:text="${noti.username}"></strong></a>
+                            <a th:href="'/viewprofile?username='+${noti.username}"><strong th:text="${noti.username}"></strong></a>
 
                             <span>has requested to join the group</span>
                             <strong th:text="${noti.subject_id}"></strong>
