--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -202,11 +202,11 @@
                                                     <input type="text" class="form-control" id="subjectID"
                                                         name="subjectID" placeholder="Enter subject ID" required>
                                                 </div>
-                                                <div class="mb-3">
+                                                <!-- <div class="mb-3">
                                                     <label for="term" class="form-label">Subject Name</label>
                                                     <input type="text" class="form-control" id="term" name="term"
                                                         placeholder="Enter term" required>
-                                                </div>
+                                                </div> -->
                                                 <div class="mb-3">
                                                     <label for="section" class="form-label">Subject Name</label>
                                                     <input type="text" class="form-control" id="section" name="section"
