--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -39,7 +39,7 @@
                                 <div th:each="member, iterStat :${group.members}">
                                     <span id="clickmember" onclick="memberClick(this)" th:text="${member.firstName + ' ' + member.lastName + ' ' + member.username + ' (' + (member.role)+')'}">
                                     </span>
-                                    <div class="d-none member_doc_id" th:text="${member.documentId}" ></div>
+                                    <div class="member_doc_id" th:text="${member.documentId}" ></div>
                                     <a th:href="'/viewprofile?username='+${member.username}">Detail</a>
                                     <br/>
                                 </div></p>
